# elevator-ocr

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish-preview-image.yml  release.yml  test.yml
app/: __init__.py  auto_capture.py  backup.py  config.py  config_store.py  debug_store.py  feedback_models.py  feedback_store.py  frame_store.py  main.py  metrics.py  ml_model.py  ml_runtime.py  models.py  mqtt.py  recognition.py  rtsp.py  state.py  training.py  web.py
scripts/: train_classifier.py
tests/: test_api.py  test_config.py  test_frame_store.py  test_recognition.py  test_roi_api.py  test_rtsp_config.py  test_state.py
