[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevator-ocr"
version = "0.1.0"
description = "RTSP elevator floor OCR service with HTTP, MQTT, Prometheus, and a simple web UI."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=1.26,<3.0",
  "opencv-python-headless>=4.10,<5.0",
  "paho-mqtt>=2.1,<3.0",
  "prometheus-client>=0.21,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "pytesseract>=0.3.13,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]
train = [
  "torch>=2.3,<3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
